--- a/src/app/password-forgot/password-forgot.page.scss
+++ b/src/app/password-forgot/password-forgot.page.scss
@@ -1,11 +1,11 @@
-.grid1 {
+.grid3 {
     height: 100%;
     padding: 0px;
     position : relative;
     margin-top: 30%;
 }
 
-.contaier-login {
+.contaier-forgot {
     display: block;
     width: 90%;
     padding: 10px;
@@ -14,20 +14,6 @@
     -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 10px 10px #21BA70;
-}
-
-.contaier-google {
-    display: block;
-    padding: 10px;
-    width: 90%;
-    background: #FFFFFF;
-    border-radius: 5px;
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 10px 10px #21BA70;
-    margin: 0 auto;
-    margin-top: -80%;
-    text-align: center;
 }
 
 ion-icon {
