--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-grid class="grid1">
+  <ion-grid class="grid2">
     <div>   
       <ion-col>
         <img src="./assets/icon/personnage.png">
@@ -8,7 +8,7 @@
   </ion-grid>
   
   <ion-slide>
-      <div class="contaier-login">
+      <div class="contaier-register">
           <ion-grid>
             <ion-col class="img-container-logo">
               <img src="./assets/icon/logo.png">
@@ -17,16 +17,26 @@
                   <ion-col>
                       <ion-list>
                         <p *ngIf="error"><a style="color:#FF0000;">Adresse email ou mot de passe incorrect</a></p>
+                        <p *ngIf="errorEmail"><a style="color:#FF0000;">Adresse email déjà prise</a></p>
                           <ion-item>
-                              <ion-icon name="person" class="icon-login"></ion-icon>
+                            <ion-icon name="person" class="icon-register"></ion-icon>
+                            <ion-input [(ngModel)]="dataUser.pseudo" type="text" required placeholder="Pseudonyme"></ion-input>
+                          </ion-item>
+                          <br />
+                          <ion-item>
+                              <ion-icon name="person" class="icon-register"></ion-icon>
                               <ion-input [(ngModel)]="dataUser.email" type="text" required placeholder="Adresse mail"></ion-input>
                           </ion-item>
                           <br />
                           <ion-item>
-                              <ion-icon name="lock-open" class="icon-login"></ion-icon>
+                              <ion-icon name="lock-open" class="icon-register"></ion-icon>
                               <ion-input [(ngModel)]="dataUser.password" type="password" required placeholder="Mot de passe"></ion-input>
                           </ion-item>
-  
+                          <br/>
+                          <ion-item>
+                              <ion-icon name="lock-closed" class="icon-register"></ion-icon>
+                              <ion-input [(ngModel)]="dataUser.passwordVerif" type="password" required placeholder="Confirmer mot de passe"></ion-input>
+                          </ion-item>
                       </ion-list>
                   </ion-col>
               </ion-row>
@@ -36,14 +46,14 @@
             </ion-label>
               <ion-row>
                   <ion-col>
-                      <ion-button (click)="login()" color ="success" shape="round">Connnexion</ion-button>
+                      <ion-button (click)="signUp()" color ="success" shape="round">S'inscrire</ion-button>
                   </ion-col>
               </ion-row>
               <ion-row>
                   <ion-col>
                       <ion-label>
                           <h3></h3>
-                          <p>Pas encore inscrit? <a (click)="register()">C'est ici</a></p>
+                          <p>Déjà un compte? <a (click)="login()">C'est ici</a></p>
                       </ion-label>
                   </ion-col>
               </ion-row>
@@ -51,7 +61,7 @@
       </div>
 
   </ion-slide>      
-  <div class="contaier-google">
+  <div class="contaier-google-register">
     <p>
       <ion-icon name="logo-google" class="icon-login"></ion-icon>
       <a href='register'>Connexion avec google</a>
