--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,11 +1,11 @@
-.grid1 {
+.grid2 {
     height: 100%;
     padding: 0px;
     position : relative;
-    margin-top: 30%;
+    margin-top: 20%;
 }
 
-.contaier-login {
+.contaier-register {
     display: block;
     width: 90%;
     padding: 10px;
@@ -16,7 +16,7 @@
     box-shadow: 0px 0px 10px 10px #21BA70;
 }
 
-.contaier-google {
+.contaier-google-register {
     display: block;
     padding: 10px;
     width: 90%;
@@ -26,7 +26,7 @@
     -moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 10px 10px #21BA70;
     margin: 0 auto;
-    margin-top: -80%;
+    margin-top: -60%;
     text-align: center;
 }
 
