last version of login with firebase

--- a/src/app/password-forgot/password-forgot.page.html
+++ b/src/app/password-forgot/password-forgot.page.html
@@ -6,32 +6,32 @@
       </ion-col>
     </div>
   </ion-grid>
-  
   <ion-slide>
       <div class="contaier-forgot">
           <ion-grid>
             <ion-col class="img-container-logo">
               <img src="./assets/icon/logo.png">
             </ion-col>
-              <ion-row *ngIf="!valid">
-                <ion-col>
-                      <ion-list>
-                        <p *ngIf="error"><a style="color:#FF0000;">Adress email incorrect</a></p>
-                          <ion-item>
-                              <ion-icon name="person" class="icon-login"></ion-icon>
-                              <ion-input [(ngModel)]="dataUser.email" type="text" required placeholder="Adresse mail"></ion-input>
-                          </ion-item>
-                      </ion-list>
+              <form>
+                <ion-row>
+                  <ion-item lines="full">
+                    <p>Réinitialisation du mot de passe.</p>
+                  </ion-item>
+                  <ion-col>
+                    <ion-list>
+                        <ion-item>
+                            <ion-icon name="person" class="icon-login"></ion-icon>
+                            <ion-input type="text" #email required placeholder="Adresse mail"></ion-input>
+                        </ion-item>
+                    </ion-list>
                   </ion-col>
-              </ion-row>
-              <ion-row *ngIf="!valid">
-                <ion-col>
-                    <ion-button (click)="email()" color ="success" shape="round">Envoyer</ion-button>
-                </ion-col>
-              </ion-row>
-              <ion-row *ngIf="valid">
-                <p>Votre demande de changement de mot de passe a été prise en compte. Un email à été envoyer au {{ dataUser.email }}</p>
-              </ion-row>
+                </ion-row>
+                <ion-row >
+                  <ion-col>
+                      <ion-button (click)="authService.PasswordRecover(email.value)" color ="danger" shape="round">Envoyer</ion-button>
+                  </ion-col>
+                </ion-row>
+              </form>
               <ion-label>
                 <h3></h3>
                 <p style="text-indent : 55%;"><a (click)="login()">Revenir à la connexion</a></p>
