--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -8,7 +8,7 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">accueil</ion-title>
-      <ion-button (click)="logout()" color ="danger" shape="round">déconnexion</ion-button>
+      <ion-button (click)="authService.SignOut()" color ="danger" shape="round">déconnexion</ion-button>
     </ion-toolbar>
   </ion-header>
 </ion-content>
