ajout de la barre de navigation

--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -10,8 +10,12 @@
       <ion-title size="large">accueil</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button (click)="authService.SignOut()" color ="danger" shape="round">déconnexion</ion-button>
-  <ion-button (click)="testSession()" color ="primary" shape="round">testSession</ion-button>
+  <ion-button (click)="authService.SignOut()" color="danger" shape="round"
+    >déconnexion</ion-button
+  >
+  <ion-button (click)="testSession()" color="primary" shape="round"
+    >testSession</ion-button
+  >
 </ion-content>
 
 <!--  exemple affichage information collection
