--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -1,17 +1,70 @@
-<ion-header [translucent]="true">
+<!--<ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>accueil</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">accueil</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-row class="info-row">
+    <ion-title size="large">accueil</ion-title>
+    <ion-col size="2">
+      <img src="./assets/icon/settings.png" />
+    </ion-col>
+  </ion-row>
+
+  <img src="./assets/accueil.png" />
+
+  <h2>Défis du jour</h2>
+  <ion-slides
+    [options]="{ slidesPerView: 'auto', spaceBetween:10 , zoom: false}"
+  >
+    <ion-slide>
+      <ion-col>
+        <ion-label>Pokémon Yellow</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-label>Mega Man X</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-label>The Legend of Zelda</ion-label>
+      </ion-col>
+    </ion-slide>
+  </ion-slides>
+  <h2>Evènements de la semaine</h2>
+  <ion-slides
+    [options]="{ slidesPerView: 'auto', spaceBetween:10 , zoom: false}"
+  >
+    <ion-slide>
+      <ion-col>
+        <ion-label>Pokémon Yellow</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-label>Mega Man X</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-label>The Legend of Zelda</ion-label>
+      </ion-col>
+    </ion-slide>
+  </ion-slides>
+  <h2>Mes associations</h2>
+  <ion-slides
+    [options]="{ slidesPerView: 'auto', spaceBetween:10 , zoom: false}"
+  >
+    <ion-slide>
+      <ion-col>
+        <ion-label>Pokémon Yellow</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-label>Mega Man X</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-label>The Legend of Zelda</ion-label>
+      </ion-col>
+    </ion-slide>
+  </ion-slides>
   <ion-button (click)="authService.SignOut()" color="danger" shape="round"
     >déconnexion</ion-button
   >
+
   <app-navigation-bar></app-navigation-bar>
 </ion-content>
