--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -8,7 +8,15 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">accueil</ion-title>
-      <ion-button (click)="authService.SignOut()" color ="danger" shape="round">déconnexion</ion-button>
     </ion-toolbar>
   </ion-header>
+  <ion-button (click)="authService.SignOut()" color ="danger" shape="round">déconnexion</ion-button>
+  <ion-button (click)="testSession()" color ="primary" shape="round">testSession</ion-button>
 </ion-content>
+
+<!--  exemple affichage information collection
+ <ion-item *ngFor="let item of informationUsers | async">
+    <ion-label>{{ item.email }} {{ item.age }}</ion-label>
+  </ion-item>
+
+-->
