page profil friend

--- a/src/app/profil-friend/profil-friend.page.html
+++ b/src/app/profil-friend/profil-friend.page.html
@@ -11,30 +11,25 @@
       <ion-label>
         [Prénom]<br />
         [Nom]<br />
-        [Points]<br />
-        [Crédits]
+        Inscrit depuis [date]<br />
+        [Lieu]
       </ion-label>
     </ion-row>
   </ion-header>
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button shape="round" color="light" size="small">Calendrier du mois</ion-button>
+        <ion-button shape="round" color="light" size="small">Bonheur</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button shape="round" color="light" size="small">Mes projets</ion-button>
+        <ion-button shape="round" color="light" size="small">Nombre de projets projets</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button shape="round" color="light" size="small">Paramètres</ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-button shape="round" color="light" size="small">Aides</ion-button>
+        <ion-button shape="round" color="light" size="small">Score</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
