--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -4,67 +4,55 @@
   </ion-toolbar>
 </ion-header>-->
 
-<ion-content [fullscreen]="true">
-  <ion-row class="info-row">
-    <ion-title size="large">accueil</ion-title>
-    <ion-col size="2">
-      <img src="./assets/icon/settings.png" />
-    </ion-col>
-  </ion-row>
+<ion-content>
+  <!--<ion-title size="large">accueil</ion-title>-->
+  <div class="parallax-image" [style.background-image]="'url('+myImagePath+')'">
+    <!--<img src="./assets/icon/settings.png" />-->
+    <div class="citation">
+      <h2>Il ne dépend que de vous.</h2>
+    </div>
+    <div class="personnage">
+      <img src="../../assets/icon/personnage.png" />
+    </div>
+  </div>
 
-  <img src="./assets/accueil.png" />
+  <div class="main">
+    <div class="bar"></div>
+    <ion-row class="ion-no-padding" *ngFor="let entry of data">
+      <ion-col>
+        <h2>{{entry.title}}</h2>
+      </ion-col>
+      <ion-slides
+        [options]="{ slidesPerView: '1.5', centeredSlides: true, spaceBetween: 10, loop: true}"
+      >
+        <ion-slide>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Défis #1</ion-card-title>
+            </ion-card-header>
 
-  <h2>Défis du jour</h2>
-  <ion-slides
-    [options]="{ slidesPerView: 'auto', spaceBetween:10 , zoom: false}"
-  >
-    <ion-slide>
-      <ion-col>
-        <ion-label>Pokémon Yellow</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>Mega Man X</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>The Legend of Zelda</ion-label>
-      </ion-col>
-    </ion-slide>
-  </ion-slides>
-  <h2>Evènements de la semaine</h2>
-  <ion-slides
-    [options]="{ slidesPerView: 'auto', spaceBetween:10 , zoom: false}"
-  >
-    <ion-slide>
-      <ion-col>
-        <ion-label>Pokémon Yellow</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>Mega Man X</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>The Legend of Zelda</ion-label>
-      </ion-col>
-    </ion-slide>
-  </ion-slides>
-  <h2>Mes associations</h2>
-  <ion-slides
-    [options]="{ slidesPerView: 'auto', spaceBetween:10 , zoom: false}"
-  >
-    <ion-slide>
-      <ion-col>
-        <ion-label>Pokémon Yellow</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>Mega Man X</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>The Legend of Zelda</ion-label>
-      </ion-col>
-    </ion-slide>
-  </ion-slides>
-  <ion-button (click)="authService.SignOut()" color="danger" shape="round"
-    >déconnexion</ion-button
-  >
+            <ion-card-content>Pokémon Yellow</ion-card-content>
+          </ion-card>
+        </ion-slide>
+        <ion-slide>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Défis #2</ion-card-title>
+            </ion-card-header>
 
-  <app-navigation-bar></app-navigation-bar>
+            <ion-card-content>Mega Man X</ion-card-content>
+          </ion-card>
+        </ion-slide>
+        <ion-slide>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Défis #3</ion-card-title>
+            </ion-card-header>
+
+            <ion-card-content>The Legend of Zelda</ion-card-content>
+          </ion-card>
+        </ion-slide>
+      </ion-slides>
+    </ion-row>
+  </div>
 </ion-content>
