Finalisation de la v1 accueil

--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -22,9 +22,7 @@
       <ion-col>
         <h2>{{entry.title}}</h2>
       </ion-col>
-      <ion-slides
-        [options]="{ slidesPerView: '1.5', centeredSlides: true, spaceBetween: 10, loop: true}"
-      >
+      <ion-slides [options]="{ slidesPerView: '3', spaceBetween: 10}">
         <ion-slide>
           <ion-card>
             <ion-card-header>
