--- a/src/app/tabnav/tabnav.page.html
+++ b/src/app/tabnav/tabnav.page.html
@@ -1,24 +1,25 @@
 <ion-tabs>
+  <div class="tabs-inner"></div>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
+    <ion-tab-button tab="accueil">
       <img src="./assets/icon/navigation-bar/home.png" />
-      Accueil
+      <ion-label>Accueil</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="défis">
       <img src="./assets/icon/navigation-bar/defis.png" />
-      Défis
+      <ion-label>Défis</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="event">
       <img src="./assets/icon/navigation-bar/event.png" />
-      Evènements
+      <ion-label>Evènements</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="association">
       <img src="./assets/icon/navigation-bar/association.png" />
-      Associations
+      <ion-label>Associations</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="profil">
       <img src="./assets/icon/navigation-bar/profil.png" />
-      Profil
+      <ion-label>Profil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
