--- a/src/app/accueil/accueil.page.scss
+++ b/src/app/accueil/accueil.page.scss
@@ -44,17 +44,26 @@
   //background-color: blue;
   position: absolute;
   width: 100%;
+  height: 90% !important;
   text-align: center;
 
   h2 {
     color: green;
   }
 }
-
 ion-card {
-  width: 100%;
-  height: 160px;
+  width: 100px;
+  height: 100px;
   border-color: black;
   background:#B0C4DE;
 
 }
+
+/*
+ion-card {
+  width: 100%;
+  height: 100px;
+  border-color: black;
+  background:#B0C4DE;
+
+}*/
