--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -8,6 +8,9 @@
   <!--<ion-title size="large">accueil</ion-title>-->
   <div class="parallax-image" [style.background-image]="'url('+myImagePath+')'">
     <!--<img src="./assets/icon/settings.png" />-->
+    <ion-button fill="clear"
+      ><img src="./assets/icon/settings.png"
+    /></ion-button>
     <div class="citation">
       <h2>Il ne dépend que de vous.</h2>
     </div>
