--- a/src/app/accueil/accueil.page.scss
+++ b/src/app/accueil/accueil.page.scss
@@ -59,11 +59,9 @@ ion-card {
 
 }
 
-/*
-ion-card {
-  width: 100%;
-  height: 100px;
-  border-color: black;
-  background:#B0C4DE;
 
-}*/
+ion-button {
+  position: absolute;
+  top: 20px;
+  right: 5%;
+}
