--- a/src/app/associations/associations.page.scss
+++ b/src/app/associations/associations.page.scss
@@ -1,5 +1,6 @@
 ion-header {
     position: relative;
+    text-align: center;
     .icons {
         position: absolute;
         display: flex;
@@ -35,6 +36,7 @@ ion-col {
     border-radius: 15px;
     margin: 25px;
     max-width: 40%;
+    min-width: 30%;
     aspect-ratio: 1/1;
 
 }
