--- a/src/app/event/event.page.scss
+++ b/src/app/event/event.page.scss
@@ -3,42 +3,56 @@
 }
 
 ion-content{
-
   --ion-background-color:#F9F9F9;
-}
-
-.pageContent{
-  border: solid red 2px;
-  background-color: #FFFFFF !important;
 }
 
 ion-toolbar {
   --ion-toolbar-background-color: transparent;
   --ion-toolbar-text-color: white;
-  }
+}
 
-.header{
-    position: fixed;
-    
-  }
+.headerToolbar{
+  --background: none;
+}
 
-.header-toolbar {
+.pageContent{
+  background: #FFFF !important;
+  border-radius: 20px 20px 0px 0px;
+  padding-bottom: 100px;
+}
 
-  }
+.titre{
+  display: flex;
+  justify-content: center;
+  color: #21BA70; 
+  font-size: 22 !important; 
+  font-family: Inter-SemiBold;
+}
 
 .img-background{
-    // width: 100%;
-    height: 25%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+  height: 25%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
-// .header-transparent {
-//     --ion-background-color: transparent;
-//     --ion-toolbar-background: transparent;
-//     --ion-toolbar-opacity: 0.9; /* Vous pouvez ajuster cette valeur pour contrôler l'opacité de l'en-tête */
-//     --ion-toolbar-border-color: transparent;
-//     --ion-toolbar-border-width: 0;
-//   }
+.imgLine{
+  width: 45px;
+  display: flex;
+  justify-content: center;
+  margin-left: 160px;
+}
+
+ion-searchbar{
+  --background: #FFFF;
+  --box-shadow: -3px 4px 10px 2px rgba(0,0,0,0.2);
+  margin-left: 4px;
+  width: 365px;
+}
+
+.searchPart{
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+}
