--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,41 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+@font-face {   
+    font-family: 'Inter-Black';    //This is what we are going to call
+    src: url('./assets/fonts/Inter-Black.ttf');
+}
+@font-face {   
+    font-family: 'Inter-Bold';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-Bold.ttf');
+}
+@font-face {   
+    font-family: 'Inter-ExtraBold';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-ExtraBold.ttf');
+}
+@font-face {   
+    font-family: 'Inter-ExtraLight';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-ExtraLight.ttf');
+}
+@font-face {   
+    font-family: 'Inter-Light';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-Light.ttf');
+}
+@font-face {   
+    font-family: 'Inter-Medium';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-Medium.ttf');
+}
+@font-face {   
+    font-family: 'Inter-Regular';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-Regular.ttf');
+}
+@font-face {   
+    font-family: 'Inter-SemiBold';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-SemiBold.ttf');
+}
+@font-face {   
+    font-family: 'Inter-Thin';  //This is what we are going to call  
+    src: url('./assets/fonts/Inter-Thin.ttf');
+}
