--- a/src/app/defis/defis.page.scss
+++ b/src/app/defis/defis.page.scss
@@ -19,15 +19,17 @@ h1, h2{
 
 .main{
   display: block;
-  background-color: rgb(232, 164, 241);
+  //background-color: rgb(232, 164, 241);
 
   h1{
     margin: 0;
     text-align: center;
+    font-size: 22px/1;
   }
   h2{
     width: 90%;
     margin: 10px auto;
+    font-size: 21px/1;
   }
 }
 
@@ -40,14 +42,96 @@ h1, h2{
 	background:#545454;
 }
 
-.today-challenge{
+.score-challenge{
   ion-col {
     display: flex;
     align-items: center;
     text-align: center;
-    padding: 0 0.5em;
-    height: 40px;
+    padding: 0 1.5em;
     color: black;
+    height: 40px;
+
+    p{
+      font: bold 15px/1 sans-serif;
+    }
+  }
+}
+
+.today-challenge{
+  ion-row{
+    ion-col {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 5px 0.5em;
+      color: black;
+
+      p{
+        font: bold 15px/1 sans-serif;
+      }
+    }
+
+    ion-col:first-child{
+      padding: 0 0.5em;
+      margin-right: 0;
+      text-align: unset;
+    }
+
+    ion-col:last-child{
+      margin-left: 0;
+    }
+  }
+}
+
+.weekly-challenge{
+  ion-row{
+    ion-col {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 5px 0.5em;
+      color: black;
+
+      p{
+        font: bold 15px/1 sans-serif;
+      }
+    }
+
+    ion-col:first-child{
+      padding: 0 0.5em;
+      margin-right: 0;
+      text-align: unset;
+    }
+
+    ion-col:last-child{
+      margin-left: 0;
+    }
+  }
+
+  ion-row:last-child{
+    display: unset;
+  }
+}
+
+.create-challenge{
+  ion-row{
+    ion-col {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 5px 0.5em;
+      color: black;
+
+      p{
+        font: bold 15px/1 sans-serif;
+      }
+    }
+
+    ion-col:first-child{
+      padding: 0 0.5em;
+      margin-right: 0;
+      text-align: unset;
+    }
   }
 }
 
@@ -58,8 +142,13 @@ ion-button {
 }
 
 ion-card {
-  margin: 10px auto;
+  margin: 20px auto;
   width: 90%;
   border-radius: 15px;
+  box-shadow: -2px 2px 4px #888, 0 0 2px #888;
+}
+
+ion-icon {
+  font-size: 22px;
 }
 
