--- a/src/app/tabnav/tabnav.page.html
+++ b/src/app/tabnav/tabnav.page.html
@@ -5,7 +5,7 @@
       <img src="./assets/icon/navigation-bar/home.png" />
       <ion-label>Accueil</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="défis">
+    <ion-tab-button tab="defis">
       <img src="./assets/icon/navigation-bar/defis.png" />
       <ion-label>Défis</ion-label>
     </ion-tab-button>
