--- a/src/app/defis/defis.page.html
+++ b/src/app/defis/defis.page.html
@@ -1,8 +1,8 @@
 <ion-content [fullscreen]="false">
   <div class="parallax-image" [style.background-image]="'url('+myImagePath+')'">
-    <ion-button fill="clear"
-      ><img src="../../assets/icon/settings.png"
-    /></ion-button>
+    <ion-button fill="clear">
+      <img src="../../assets/icon/settings.png" />
+    </ion-button>
   </div>
   <div class="main">
     <h1>Défis</h1>
@@ -31,7 +31,8 @@
           <ion-grid class="today-challenge">
             <ion-row>
               <ion-col size="auto">
-                <ion-icon name="close-outline"></ion-icon>
+                <ion-icon (click)="setOpen(true)" name="close-outline">
+                </ion-icon>
               </ion-col>
               <ion-col>
                 <p>Envoie un message pour prendre des nouvelles d’un proche</p>
@@ -48,9 +49,9 @@
       <ion-card-content>
         <ion-grid class="weekly-challenge">
           <ion-row>
-            <ion-col size="auto"
-              ><ion-icon name="close-outline"></ion-icon
-            ></ion-col>
+            <ion-col size="auto">
+              <ion-icon (click)="setOpen(true)" name="close-outline"></ion-icon>
+            </ion-col>
             <ion-col><p>Privilégier les escaliers</p></ion-col>
             <ion-col size="auto"><p>40 pts</p></ion-col>
           </ion-row>
@@ -64,9 +65,10 @@
       <ion-card-content>
         <ion-grid class="weekly-challenge">
           <ion-row>
-            <ion-col size="auto"
-              ><ion-icon name="close-outline"></ion-icon
-            ></ion-col>
+            <ion-col size="auto">
+              <ion-icon (click)="setOpen(true)" name="close-outline">
+              </ion-icon>
+            </ion-col>
             <ion-col><p>Privilégier les escaliers</p></ion-col>
             <ion-col size="auto"><p>40 pts</p></ion-col>
           </ion-row>
@@ -91,5 +93,35 @@
         </ion-grid>
       </ion-card-content>
     </ion-card>
+
+    <ion-modal [isOpen]="isModalOpen">
+      <ng-template>
+        <div class="block">
+          <ion-grid>
+            <ion-row>
+              <h2>Êtes vous sur de vouloir modifier votre défi ?</h2>
+            </ion-row>
+            <ion-row>
+              <p>1 crédit restant</p>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-button
+                  style="--background: rgb(33, 186, 112, 0.1); --color: #71867c"
+                  (click)="setOpen(false)"
+                >
+                  Non
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-button style="--background: rgb(33, 186, 112, 0.7)">
+                  Oui
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+      </ng-template>
+    </ion-modal>
   </div>
 </ion-content>
