correction nav bar

--- a/src/app/tabnav/tabnav.page.scss
+++ b/src/app/tabnav/tabnav.page.scss
@@ -13,9 +13,10 @@ ion-tab-bar {
   background-color: rgba(245,245,245,0.5);
   border-radius: 16px 16px 0 0;
   box-shadow: 0px -2px 4px #888,;
+
 }
 
 ion-tab-button{
-  padding-bottom: 8px;
-  padding-top: 8px;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
